# CubicalRidgeSurfaceFinder

./: .gitignore  CMakeLists.txt  Config.h  Config.h.in  README.md  api.cpp  examples.cxx  main.cxx  midmembrane.cxx  test.cpp  test.cxx
api/python/: bindings.py
data/surfaces/: simple_ridge_dist_p05-p15.npy  simple_ridge_labels_p05-p15.npy  simple_ridge_time_p05-p15.npy
data/volumes/: 10x10x10.npy  grayimage02_333_double.npy  singularx2.npy  singularx3.npy
data/volumes/npy/: 10x10x10_dist.npy  euclidean02.npy  grayimage02_333.npy  (+4 more)
docs/: README_Metadata.md
includes/boost_hash/: Makefile  cmake_install.cmake
includes/boost_heap/: Makefile  cmake_install.cmake
includes/catch2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Catch2.sln  Makefile  cmake_install.cmake
includes/nanoflann/: nanoflann.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/fastmarching/: CMakeLists.txt  FastMarching.hpp  FastMarchingAggregateObserver.hpp  FastMarchingBitSetObserver.hpp  FastMarchingFlowObserver.hpp  FastMarchingGeodesicDistanceObserver.hpp  FastMarchingObserver.hpp  FastMarchingUtilities.hpp  Makefile  cmake_install.cmake
src/field/: BLocation.hpp  CLocation.hpp  CLocationPairScanner.hpp  CMakeLists.txt  Field.hpp  GridPositionBorderIterator.hpp  GridPositionBoxIterator.hpp  GridPositionIterator.hpp  Makefile  RawField.hpp  RawFieldView.hpp  cmake_install.cmake
src/filter/: bilateral.h  dijkstra.h  edt.h
src/graph/: LineSet.hpp  SpatialGraph.hpp
src/io/: CMakeLists.txt  Makefile  cmake_install.cmake  common.cpp  common.hpp  metadata.hpp  mrc.hpp  npy.cpp  npy.hpp  nrrd.hpp  sls.hpp  spatialinfo.hpp  tgf.hpp  vertexset.hpp  wavefront.hpp
src/rsf/: Amanatides.hpp  CMakeLists.txt  ChangeGraph.cpp  ChangeGraph.h  CubicalRidgeSurfaceFinder.cpp  CubicalRidgeSurfaceFinder.h  CubicalRidgeSurfaceFinder.h.orig  CubicalRidgeSurfaceFinderSettings.hpp  FaceGraph.hpp  Faces.hpp  FacesToCubicalMesh.hpp  Flooding.hpp  Graph.hpp  Makefile  Seed.cpp  Seed.h  SeedIterator.hpp  cmake_install.cmake  deprecated_MarchingCubes.hpp
src/surface/: CMakeLists.txt  Makefile  StaticSurface.hpp  Surface.hpp  SurfaceUpdate.hpp  Triangle.hpp  cmake_install.cmake
src/utils/: AmiraLattice.hpp  BBox.hpp  CMakeLists.txt  Dims.hpp  Direction.hpp  HashMap.hpp  IteratorEndSentinel.hpp  IteratorsToRange.hpp  Lattice.hpp  Makefile  Mapping.hpp  Permutation.hpp  PointCloudAdaptor.hpp  ProgressbarReportHelper.hpp  Range.hpp  SeedSampler.hpp  StructureTensor.hpp  UnionFind.hpp  Utils.hpp  Vec.cpp  Vec.hpp  cmake_install.cmake  parsing.hpp
test_data/surfaces/: simple_ridge.npy  simple_ridge_dist_p05-p15_nocap.npy  simple_ridge_time_p05-p15_nocap.npy
test_data/volumes/: 10x10x10_time.npy  eikonal_01x02.npy  fortran_order_333.npy  grayimage01_333.npy  grayimage01_333_double.npy  grayimage_234.npy  grayimage_234_fortran.npy  grayimage_234_fortran.txt
(+7 files in other folders)
